force-app/main/default/objects/Case/fields/ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>ABN_Number__c</fullName>
    <label>ABN Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>