force-app/main/default/objects/Case/fields/ACR_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ACR_Date_Time__c</fullName>
    <label>ACR Date/Time</label>
    <type>DateTime</type>
</CustomField>