force-app/main/default/objects/Case/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Required</label>
    <type>Checkbox</type>
</CustomField>