force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Contact.MailingStreet &amp; &apos; &apos; &amp; Contact.MailingCity &amp; &apos; &apos; &amp; Contact.MailingState &amp; &apos; &apos; &amp; Contact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>