force-app/main/default/objects/Case/fields/All_Documents_Provided__c.field-meta.xml
<CustomField>
    <fullName>All_Documents_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Documents Provided</label>
    <type>Checkbox</type>
</CustomField>