force-app/main/default/objects/Case/fields/Any_Other_Assets__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Assets__c</fullName>
    <label>Any Other Assets</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>