force-app/main/default/objects/Case/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Updating Date to Date/Time</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>