force-app/main/default/objects/Case/fields/Approval_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiration_Date__c</fullName>
    <description>change Date to Date/time</description>
    <label>Approval Expiration Date</label>
    <type>DateTime</type>
</CustomField>