force-app/main/default/objects/Case/fields/Assessment_Quality__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Quality__c</fullName>
    <label>Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Assessed</fullName>
            </value>
            <value>
                <fullName>At Verification</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Ready To Lodge</fullName>
            </value>
            <value>
                <fullName>Lodged</fullName>
            </value>
            <value>
                <fullName>Conditionally Approved</fullName>
            </value>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>