force-app/main/default/objects/Case/fields/Asset_Backed__c.field-meta.xml
<CustomField>
    <fullName>Asset_Backed__c</fullName>
    <formula>IF(ISPICKVAL( Contact.Living_situation__c , &apos;Owner with Mortgage&apos;), true,
   IF(ISPICKVAL(Contact.Living_situation__c, &apos;Owner without Mortgage&apos;), true,
      IF(ISPICKVAL(Contact.Living_situation__c, &apos;Renting but Own Property&apos;), true,
   false
          )
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset-Backed</label>
    <type>Checkbox</type>
</CustomField>