force-app/main/default/objects/Case/fields/At_Verification_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>At_Verification_Update_Date__c</fullName>
    <inlineHelpText>When Assessment Quality is updated to At Verification</inlineHelpText>
    <label>At Verification  Date</label>
    <type>DateTime</type>
</CustomField>