force-app/main/default/objects/Case/fields/Awaiting_Documents_CARS24_SMS_3__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Documents_CARS24_SMS_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting Documents - CARS24 SMS 3</label>
    <type>Checkbox</type>
</CustomField>