force-app/main/default/objects/Case/fields/Awaiting_Documents_Date__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Documents_Date__c</fullName>
    <description>changing field type from Date to Date/Time</description>
    <label>Awaiting Documents Date</label>
    <type>DateTime</type>
</CustomField>