force-app/main/default/objects/Case/fields/Balloon_Payment__c.field-meta.xml
<CustomField>
    <fullName>Balloon_Payment__c</fullName>
    <label>Balloon Payment</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>