force-app/main/default/objects/Case/fields/Brokerage_fee__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_fee__c</fullName>
    <label>Brokerage Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>