force-app/main/default/objects/Case/fields/Buffer_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Assessment__c</fullName>
    <label>Buffer Assessment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>