force-app/main/default/objects/Case/fields/Business_Duration__c.field-meta.xml
<CustomField>
    <fullName>Business_Duration__c</fullName>
    <label>Business Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>