force-app/main/default/objects/Case/fields/Business_GST__c.field-meta.xml
<CustomField>
    <fullName>Business_GST__c</fullName>
    <label>Business GST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>