force-app/main/default/objects/Case/fields/Buying_a_Car_From__c.field-meta.xml
<CustomField>
    <fullName>Buying_a_Car_From__c</fullName>
    <label>Buying a Car From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Private sale</fullName>
            </value>
            <value>
                <fullName>Still deciding</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
                <isActive>false</isActive>
                <label>Private</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>