force-app/main/default/objects/Case/fields/Call_Experiment__c.field-meta.xml
<CustomField>
    <fullName>Call_Experiment__c</fullName>
    <description>Field to manually update to accurately track how many calls a customer receives in the experiment cohort</description>
    <label>Call Experiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call 1 Made</fullName>
            </value>
            <value>
                <fullName>Call 2 Made</fullName>
            </value>
            <value>
                <fullName>Call 3 Made</fullName>
            </value>
            <value>
                <fullName>Call 4 Made</fullName>
            </value>
            <value>
                <fullName>Call 5 Made</fullName>
            </value>
            <value>
                <fullName>Call 6 Made</fullName>
            </value>
            <value>
                <fullName>Call 7 Made</fullName>
            </value>
            <value>
                <fullName>Call 8 Made</fullName>
            </value>
            <value>
                <fullName>Call 9 Made</fullName>
            </value>
            <value>
                <fullName>Call 10 Made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>