force-app/main/default/objects/Case/fields/Car_Condition__c.field-meta.xml
<CustomField>
    <fullName>Car_Condition__c</fullName>
    <label>Car Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>