force-app/main/default/objects/Case/fields/Cars24_Invoice_Received__c.field-meta.xml
<CustomField>
    <fullName>Cars24_Invoice_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cars24 Invoice Received</label>
    <type>Checkbox</type>
</CustomField>