force-app/main/default/objects/Case/fields/Cars24_Potential_Withdraw__c.field-meta.xml
<CustomField>
    <fullName>Cars24_Potential_Withdraw__c</fullName>
    <label>Rate sensitive</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shopping around</fullName>
            </value>
            <value>
                <fullName>Rate match</fullName>
            </value>
            <value>
                <fullName>Dealer match</fullName>
            </value>
            <value>
                <fullName>Going to big 4</fullName>
            </value>
            <value>
                <fullName>Found other finance option</fullName>
                <isActive>false</isActive>
                <label>Found other finance option</label>
            </value>
            <value>
                <fullName>Limited servicing capacity (reduced loan size)</fullName>
                <isActive>false</isActive>
                <label>Limited servicing capacity (reduced loan size)</label>
            </value>
            <value>
                <fullName>New borrower proposed as customer not credit worthy</fullName>
                <isActive>false</isActive>
                <label>New borrower proposed as customer not credit worthy</label>
            </value>
            <value>
                <fullName>No Reply / Cold Lead</fullName>
                <isActive>false</isActive>
                <label>No Reply / Cold Lead</label>
            </value>
            <value>
                <fullName>No longer buying a car</fullName>
                <isActive>false</isActive>
                <label>No longer buying a car</label>
            </value>
            <value>
                <fullName>Paying Cash</fullName>
                <isActive>false</isActive>
                <label>Paying Cash</label>
            </value>
            <value>
                <fullName>Withdrawn due to rate increase (CF issues, etc.)</fullName>
                <isActive>false</isActive>
                <label>Rate increase (CF issues, etc.)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>