force-app/main/default/objects/Case/fields/Cars24_Potential_Withdraw_Is_Changed__c.field-meta.xml
<CustomField>
    <fullName>Cars24_Potential_Withdraw_Is_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cars24 Potential Withdraw Is Changed</label>
    <type>Checkbox</type>
</CustomField>