force-app/main/default/objects/Case/fields/Case_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_First_Name__c</fullName>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Contact First Name</label>
    <type>Text</type>
</CustomField>