force-app/main/default/objects/Case/fields/Case_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Full_Name__c</fullName>
    <formula>Contact.FirstName+ &apos; &apos; +Contact.LastName</formula>
    <label>Case Contact Full Name</label>
    <type>Text</type>
</CustomField>