force-app/main/default/objects/Case/fields/case_modified_value__c.field-meta.xml
<CustomField>
    <fullName>case_modified_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>case modified value</label>
    <type>Checkbox</type>
</CustomField>