force-app/main/default/objects/Case/fields/Case_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_First_Name__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner First Name</label>
    <type>Text</type>
</CustomField>