force-app/main/default/objects/Case/fields/Case_Owner_Name_for_SMS__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name_for_SMS__c</fullName>
    <formula>Owner:User.FirstName</formula>
    <label>Case Owner Name for SMS</label>
    <type>Text</type>
</CustomField>