force-app/main/default/objects/Case/fields/Cash_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Deposit__c</fullName>
    <label>Cash Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>