force-app/main/default/objects/Case/fields/CGU_insured__c.field-meta.xml
<CustomField>
    <fullName>CGU_insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CGU insured</label>
    <type>Checkbox</type>
</CustomField>