force-app/main/default/objects/Case/fields/Checkout_Date__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Date__c</fullName>
    <label>Checkout Date</label>
    <type>DateTime</type>
</CustomField>