force-app/main/default/objects/Case/fields/Comm_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Comm_Company_Type__c</fullName>
    <label>Comp Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>