force-app/main/default/objects/Case/fields/Comm_Industry__c.field-meta.xml
<CustomField>
    <fullName>Comm_Industry__c</fullName>
    <label>Comp Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>