force-app/main/default/objects/Case/fields/Comm_Name__c.field-meta.xml
<CustomField>
    <fullName>Comm_Name__c</fullName>
    <label>Comp Name</label>
    <type>TextArea</type>
</CustomField>