force-app/main/default/objects/Case/fields/Comm_Number_Of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Comm_Number_Of_Directors__c</fullName>
    <label>Comp Number Of Directors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>