force-app/main/default/objects/Case/fields/Comm_Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>Comm_Trust_Name__c</fullName>
    <label>Comp Trust Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>