force-app/main/default/objects/Case/fields/Comm_Trustee_Name__c.field-meta.xml
<CustomField>
    <fullName>Comm_Trustee_Name__c</fullName>
    <label>Comp Trustee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>