force-app/main/default/objects/Case/fields/Comparison_rate__c.field-meta.xml
<CustomField>
    <fullName>Comparison_rate__c</fullName>
    <label>Comparison Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>