force-app/main/default/objects/Case/fields/Comprehensive_Score__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Score__c</fullName>
    <label>Comprehensive Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>