force-app/main/default/objects/Case/fields/Connect_Contact_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Connect_Contact_Attributes__c</fullName>
    <description>AmazonConnect Voicemail field</description>
    <label>Connect Contact Attributes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>