force-app/main/default/objects/Case/fields/Counter_offer__c.field-meta.xml
<CustomField>
    <fullName>Counter_offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counter offer</label>
    <type>Checkbox</type>
</CustomField>