force-app/main/default/objects/Case/fields/Credit_Agent__c.field-meta.xml
<CustomField>
    <fullName>Credit_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>