force-app/main/default/objects/Case/fields/Credit_Agent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Agent_First_Name__c</fullName>
    <formula>Credit_Agent__r.FirstName</formula>
    <label>Credit Agent First Name</label>
    <type>Text</type>
</CustomField>