force-app/main/default/objects/Case/fields/Credit_Handback__c.field-meta.xml
<CustomField>
    <fullName>Credit_Handback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Handback</label>
    <type>Checkbox</type>
</CustomField>