force-app/main/default/objects/Case/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealership Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>