force-app/main/default/objects/Case/fields/Dealer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Phone_Number__c</fullName>
    <label>Dealer Phone Number</label>
    <type>Phone</type>
</CustomField>