force-app/main/default/objects/Case/fields/Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Decline_Date__c</fullName>
    <label>Decline Date</label>
    <type>DateTime</type>
</CustomField>