force-app/main/default/objects/Case/fields/Decline_Withdraw_Review__c.field-meta.xml
<CustomField>
    <fullName>Decline_Withdraw_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decline/Withdraw Review</label>
    <type>Checkbox</type>
</CustomField>