force-app/main/default/objects/Case/fields/Delivery_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Booked_Date__c</fullName>
    <label>Delivery Booked Date</label>
    <type>Date</type>
</CustomField>