force-app/main/default/objects/Case/fields/dependents__c.field-meta.xml
<CustomField>
    <fullName>dependents__c</fullName>
    <label>Dependents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>