force-app/main/default/objects/Case/fields/Deposit_Calc__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Calc__c</fullName>
    <formula>Cash_Deposit__c +  Trade_in_Value__c - Trade_in_Finance_owing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>