force-app/main/default/objects/Case/fields/Disable_Comms__c.field-meta.xml
<CustomField>
    <fullName>Disable_Comms__c</fullName>
    <formula>If(Partner_Account__r.Name =&apos;Woodleys Motor Group&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable Comms</label>
    <type>Checkbox</type>
</CustomField>