force-app/main/default/objects/Case/fields/Disable_decline_referral__c.field-meta.xml
<CustomField>
    <fullName>Disable_decline_referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field in SF to prevent auto referral</description>
    <inlineHelpText>To prevent auto referral</inlineHelpText>
    <label>Disable decline referral</label>
    <type>Checkbox</type>
</CustomField>