force-app/main/default/objects/Case/fields/Driva_UUID__c.field-meta.xml
<CustomField>
    <fullName>Driva_UUID__c</fullName>
    <label>Driva UUID</label>
    <type>TextArea</type>
</CustomField>