force-app/main/default/objects/Case/fields/Eligible_Lender_List__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Lender_List__c</fullName>
    <label>Eligible Lender List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>