force-app/main/default/objects/Case/fields/Email_user__c.field-meta.xml
<CustomField>
    <fullName>Email_user__c</fullName>
    <formula>$User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email_user</label>
    <type>Text</type>
</CustomField>