force-app/main/default/objects/Case/fields/Employment_Industry_Continuation__c.field-meta.xml
<CustomField>
    <fullName>Employment_Industry_Continuation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Industry Continuation</label>
    <type>Checkbox</type>
</CustomField>