force-app/main/default/objects/Case/fields/Entertainment_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Per_Month__c</fullName>
    <label>Entertainment Per Month</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>