force-app/main/default/objects/Case/fields/Equifax_One_Score__c.field-meta.xml
<CustomField>
    <fullName>Equifax_One_Score__c</fullName>
    <label>Equifax One Score</label>
    <length>225</length>
    <type>Text</type>
</CustomField>