force-app/main/default/objects/Case/fields/Establishment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee__c</fullName>
    <label>Establishment Fee</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>