force-app/main/default/objects/Case/fields/Existing_vehicles__c.field-meta.xml
<CustomField>
    <fullName>Existing_vehicles__c</fullName>
    <label>Existing Vehicles</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>