force-app/main/default/objects/Case/fields/expenses_Rent_Percentage__c.field-meta.xml
<CustomField>
    <fullName>expenses_Rent_Percentage__c</fullName>
    <label>Share of Rent / Mortgage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>