force-app/main/default/objects/Case/fields/Feed_CreatedbyId__c.field-meta.xml
<CustomField>
    <fullName>Feed_CreatedbyId__c</fullName>
    <formula>TEXT(IF( OR(Set_follow_up_date__c&lt; DATETIMEVALUE(DATE(YEAR(DATEVALUE(Set_follow_up_date__c)),3,31)-(WEEKDAY(DATE(YEAR(DATEVALUE(Set_follow_up_date__c)),3,31))-1)) +1/24,
    	Set_follow_up_date__c&gt; DATETIMEVALUE(DATE(YEAR(DATEVALUE(Set_follow_up_date__c)),10,31)- (WEEKDAY(DATE(YEAR(DATEVALUE(Set_follow_up_date__c)),10,31))-1))+1/24),
    HOUR(TIMEVALUE(Set_follow_up_date__c))
    -IF(HOUR(TIMEVALUE(Set_follow_up_date__c))&gt;23,24,0)
    ,
    HOUR(TIMEVALUE(Set_follow_up_date__c+1/24))
    -IF(HOUR(TIMEVALUE(Set_follow_up_date__c+1/24))&gt;23,24,0)
    ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feed CreatedbyId</label>
    <type>Text</type>
</CustomField>