force-app/main/default/objects/Case/fields/First_Time_Settlement__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Settlement</label>
    <type>Checkbox</type>
</CustomField>