force-app/main/default/objects/Case/fields/Fleet_Avenue_Referal__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Avenue_Referal__c</fullName>
    <label>Fleet Avenue Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>