force-app/main/default/objects/Case/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <formula>IF( Set_follow_up_date__c &lt;&gt; NULL, IMAGE(&quot;/img/samples/flag_red.gif &quot;,&quot;Warning&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up</label>
    <type>Text</type>
</CustomField>