force-app/main/default/objects/Case/fields/Follow_Up_Calls__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Calls__c</fullName>
    <label>Follow Up Calls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call 1 Made</fullName>
            </value>
            <value>
                <fullName>Call 2 Made</fullName>
            </value>
            <value>
                <fullName>Call 3 Made</fullName>
            </value>
            <value>
                <fullName>Call 4 Made</fullName>
            </value>
            <value>
                <fullName>Call 5 Made</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
            <value>
                <fullName>Calls reset</fullName>
                <isActive>false</isActive>
                <label>Calls reset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>