force-app/main/default/objects/Case/fields/Follow_Up_Due__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Due__c</fullName>
    <formula>Set_follow_up_date__c  &lt;=  NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up Due</label>
    <type>Checkbox</type>
</CustomField>