force-app/main/default/objects/Case/fields/Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Type__c</fullName>
    <label>Follow Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Lender Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Action</fullName>
            </value>
            <value>
                <fullName>Requiring Driva Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>