force-app/main/default/objects/Case/fields/Food_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Food_Per_Month__c</fullName>
    <label>Food Per Month</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>